--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1>
-  {{title}}
-</h1>
+<md-card>
+  <button md-button [md-menu-trigger-for]="menu">
+    MENU
+  </button>
+</md-card>
+
+<md-menu #menu="mdMenu">
+  <button md-menu-item routerLinkActive="active" [routerLink]="['']">Home</button>
+  <button md-menu-item routerLinkActive="active" [routerLink]="['barcode']">barcode</button>
+  <button md-menu-item routerLinkActive="active" [routerLink]="['material']">material</button>
+</md-menu>
+
+<router-outlet></router-outlet>
