Improvement: better process on image while using webcam

--- a/src/app/barcode/media-stream/media-stream.component.html
+++ b/src/app/barcode/media-stream/media-stream.component.html
@@ -1,7 +1,4 @@
 <h3>The user's camera</h3>
 <p>{{ lastResult || async }}</p>
 
-<div id="result_strip">
-  <ul class="thumbnails"></ul>
-</div>
-<div id="interactive" class="viewport"></div>
+<div id="interactive" class="viewport" #interactive></div>
