--- a/src/app/barcode/media-stream/media-stream.component.html
+++ b/src/app/barcode/media-stream/media-stream.component.html
@@ -2,3 +2,26 @@
 <p>{{ lastResult || async }}</p>
 
 <div id="interactive" class="viewport" #interactive></div>
+
+<div class="ticket">
+  <div class="datas">
+    <a class="link">
+      <div class="ribbon">
+        <div class="label">LIMITED</div>
+      </div>
+      <span>TOMORROWLAND</span>
+      <strong>10'</strong>
+      <em>Green PASS</em>
+    </a>
+  </div>
+  <a class="button">ORDER NOW!</a>
+</div>
+<div class="ticket-in">
+  <div class="content">
+    <div class="pass">
+      <h1>Dreamville Limited</h1>
+    </div>
+    <span>PREMIUM</span>
+    <em>2015</em>
+  </div>
+</div>
