--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,45 @@
-<md-card>
-  <button md-button [md-menu-trigger-for]="menu">
-    MENU
-  </button>
-</md-card>
+<md-sidenav-layout [class.m2app-dark]="isDarkTheme">
 
-<md-menu #menu="mdMenu">
-  <button md-menu-item routerLinkActive="active" [routerLink]="['']">Home</button>
-  <button md-menu-item routerLinkActive="active" [routerLink]="['barcode']">barcode</button>
-  <button md-menu-item routerLinkActive="active" [routerLink]="['material']">material</button>
-</md-menu>
+  <md-sidenav #sidenav mode="side">
+    <div class="flex-container"
+         fxLayout="column">
+      <button class="flex-item" md-button
+              [routerLinkActive]="['active']"
+              [routerLink]="['barcode']">Homepage
+      </button>
+      <div class="flex-item">
+        <hr>
+      </div>
+      <button class="flex-item" md-button
+              [routerLinkActive]="['active']"
+              [routerLink]="['barcode/media']">Media Stream
+      </button>
+      <div class="flex-item">
+        <hr>
+      </div>
+      <button class="flex-item" md-button
+              [routerLinkActive]="['active']"
+              [routerLink]="['barcode/field']">Input File
+      </button>
+    </div>
+  </md-sidenav>
+  <md-toolbar color="primary">
 
-<router-outlet></router-outlet>
+    <button class="app-icon-button" (click)="sidenav.toggle()">
+      <i class="material-icons app-toolbar-menu">menu</i>
+    </button>
+    {{title}}
+
+    <span class="app-toolbar-filler"></span>
+    <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+  </md-toolbar>
+
+
+  <div class="app-content">
+    <router-outlet></router-outlet>
+  </div>
+
+</md-sidenav-layout>
+
+
+<app-fab-menu></app-fab-menu>
