Improvement: Better UI with Material Design for File Upload component

--- a/src/app/barcode/input-field/input-field.component.html
+++ b/src/app/barcode/input-field/input-field.component.html
@@ -1,57 +1,86 @@
-<br/><br/>
+<div class="flex-container" fxLayout="row" fxLayout.xs="column"
+     fxLayoutAlign="center center"
+     fxLayoutAlign.xs="start">
 
-<label for="isbn_input">EAN:</label>
-<input id="isbn_input" class="isbn" type="text" #isbn>
-<input type="file" accept="image/*" capture="camera" (change)="onChange($event)">
+  <md-card class="flex-item" fxFlex="50">
+
+    <div class="flex-container" fxLayout="row">
+      <div class="flex-item" fxFlex="90">
+        <md-input #isbn maxlength="50">
+          <md-placeholder>
+            Barcode Number
+          </md-placeholder>
+          <md-hint align="end">
+            {{isbn.characterCount}}
+          </md-hint>
+        </md-input>
+      </div>
+      <div class="flex-item" fxFlex="10">
+
+        <button (click)="onClick()" md-fab>
+          <md-icon>file_upload</md-icon>
+        </button>
+        <input type="file" accept="image/*" capture="camera" #fileInputbox (change)="onChange($event)"
+               [ngClass]="['none']">
+      </div>
+
+    </div>
 
 
-<div class="thumbnail" *ngIf="codeNumber">
-  <div class="imgWrapper"><img [src]="resultUrl"></div>
-  <div class="caption"><h4 class="code">{{codeNumber}}</h4></div>
+    <div class="flex-container" fxLayout="column">
+
+      <div class="thumbnail flex-item" *ngIf="resultCode">
+        <div class="imgWrapper text-center"><img class="responsive-img" [src]="resultUrl"></div>
+        <div class="caption text-center"><h3 class="code">{{resultCode}}</h3></div>
+      </div>
+
+      <md-progress-bar *ngIf="startProgress"
+                       class="app-progress flex-item"
+                       mode="indeterminate"
+                       aria-label="Indeterminate progress-bar example"></md-progress-bar>
+    </div>
+  </md-card>
+
+  <md-card class="flex-item app-input-section" fxFlex="50" *ngIf="resultCode">
+
+    <div class="container" >
+      <div class="tab"></div>
+      <div class="paid"><p>Your Ticket Information</p></div>
+      <div class="receipt">
+        <div class="paper">
+          <div class="title">Mr Blah Blahs</div>
+          <div class="date">Date: 07/01/2016</div>
+          <table>
+            <tbody>
+            <tr>
+              <td>2 x Adult</td>
+              <td class="right">$10</td>
+            </tr>
+            <tr>
+              <td>1 x Child</td>
+              <td class="right">$30</td>
+            </tr>
+            </tbody>
+          </table>
+          <div class="sign center">
+            <img class="small-img"  [src]="resultUrl">
+            <br/>
+            {{resultCode}}
+            <br/>
+            <div class="thankyou">
+              Thank you for your business
+            </div>
+          </div>
+        </div>
+
+        <div>
+        </div>
+      </div>
+
+    </div>
+
+  </md-card>
+
 </div>
 
 
-<h3 *ngIf="resultCode">
-  {{resultCode}}
-</h3>
-
-
-<div class="container">
-  <div class="tab"></div>
-  <div class="paid"><p>Receipt Paid successfully</p></div>
-  <div class="receipt">
-    <div class="paper">
-      <div class="title">Receipt</div>
-      <div class="date">Date: 20/07/2013</div>
-      <table>
-        <tbody>
-        <tr>
-          <td>2 x Coffee</td>
-          <td class="right">$10</td>
-        </tr>
-        <tr>
-          <td>1 x Rice</td>
-          <td class="right">$30</td>
-        </tr>
-        <tr>
-          <td>5 x Milk</td>
-          <td class="right">$90</td>
-        </tr>
-        <tr>
-          <td colspan="2" class="center"><input type="button" value="Pay Now" onClick="pay()"/></td>
-        </tr>
-        </tbody>
-      </table>
-      <div class="sign center">
-        <div class="barcode"></div>
-        <br/>
-        0123456789
-        <br/>
-        <div class="thankyou">
-          Thank you for your business
-        </div>
-      </div>
-    </div>
-
-    <div>
-    </div>
