--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     {{title}}
 
     <span class="app-toolbar-filler"></span>
-    <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+    <button md-button (click)="isDarkTheme = !isDarkTheme"><md-icon>settings</md-icon></button>
   </md-toolbar>
 
 
