Improvement: Better Usage of Observable in services

--- a/src/app/barcode/input-field/input-field.component.html
+++ b/src/app/barcode/input-field/input-field.component.html
@@ -71,6 +71,9 @@
             <br/>
             {{resultCode}}
             <br/>
+            <div class="flex-item" *ngIf="message">
+              {{message}}
+            </div>
             <div class="thankyou">
               Thank you for your business
             </div>
