--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,7 +122,12 @@ md-sidenav-layout.m2app-dark {
   width:100%;
 }
 .viewport > canvas {
-  position: absolute;
+  position: inherit;
+  width: 100% !important;
+  z-index: 99;
+}
+.viewport > video {
+  width: 100% !important;
 }
 .app-content{
   height:100vh;
@@ -140,4 +145,19 @@ md-sidenav-layout.m2app-dark {
 .small-img{
   max-width: 100px;
   height: 40px;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix { display: inline-block; }
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+
+.viewport{
+  position: relative;
 }
