--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,3 +161,13 @@ md-sidenav-layout.m2app-dark {
 .viewport{
   position: relative;
 }
+
+.instantInput{
+  border: 0;
+  padding:15px;
+  width: 96%;
+  font-size: 22px;
+  &:focus{
+    border:0;
+  }
+}
