--- a/src/app/barcode/media-stream/media-stream.component.html
+++ b/src/app/barcode/media-stream/media-stream.component.html
@@ -17,7 +17,7 @@
           </div>
           <span>Your Code is</span>
           <strong>{{ lastResult || async }}'</strong>
-          <em *ngIf="!message">Green PASS</em>
+          <em *ngIf="!message">Searching...</em>
           <em *ngIf="message">{{message}}</em>
         </a>
       </div>
