--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,6 +103,10 @@ md-sidenav-layout.m2app-dark {
   height: 30px;
   width: 30px;
   display: inline-block;
+  &.smaller{
+    height: 10px;
+    width: 10px;
+  }
 }
 
 .app-input-icon {
