--- a/src/app/barcode/media-stream/media-stream.component.html
+++ b/src/app/barcode/media-stream/media-stream.component.html
@@ -3,11 +3,19 @@
      fxLayoutAlign.xs="start">
 
   <md-card class="flex-item" fxFlex="50">
-    <p>Notice: You must allow to use your webcam. This Option only works on IE11+ and may not work with Android browser older version. Alternatively use upload file option.</p>
+    <p>Notice: You must allow to use your webcam. This Option only works on IE11+ and may not work with Android browser
+      older version. Alternatively use upload file option.</p>
     <div id="interactive" class="viewport clearfix" #interactive></div>
+
+    <div class="show__sm" *ngIf="lastResult">
+      <p>Your Code is</p>
+      <p>{{ lastResult || async }}'</p>
+      <p *ngIf="!message">Searching...</p>
+      <p *ngIf="message">{{message}}</p>
+    </div>
   </md-card>
 
-  <md-card class="flex-item app-input-section" fxFlex="50" *ngIf="lastResult">
+  <md-card class="flex-item app-input-section hidden__sm" fxFlex="50" *ngIf="lastResult">
 
     <div class="ticket">
       <div class="datas">
