--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,8 +24,8 @@
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 @import '~@angular/material/core/theming/all-theme';
