optimize upload component

--- a/src/app/barcode/input-field/input-field.component.html
+++ b/src/app/barcode/input-field/input-field.component.html
@@ -20,7 +20,8 @@
         <button (click)="onClick()" md-fab>
           <md-icon>file_upload</md-icon>
         </button>
-        <input type="file" accept="image/*" capture="camera" #fileInputbox (cancel)="onCancel($event)" (change)="onChange($event)"
+        <input type="file" accept="image/*" capture="camera" #fileInputbox (cancel)="onCancel($event)"
+               (change)="onChange($event)"
                [ngClass]="['none']">
       </div>
 
