--- a/src/app/barcode/media-stream/media-stream.component.scss
+++ b/src/app/barcode/media-stream/media-stream.component.scss
@@ -60,13 +60,7 @@
     text-align: center;
     color: #fff;
     background-color: #e85e68;
-    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    -ms-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    -webkit-transform: rotate(45deg) translate3d(0, 0, 0);
-    -moz-transform: rotate(45deg) translate3d(0, 0, 0);
-    -ms-transform: rotate(45deg) translate3d(0, 0, 0);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     transform: rotate(45deg) translate3d(0, 0, 0);
     &:before, &:after {
       content: '';
